@@ -21,6 +21,8 @@ mlr_new:
 - Fixed a bug where the function capLargeValues wasn't working if you passed a task.
 - capLargeValues now has a new argument "target", to prevent from capping response values.
 - classif.gbm, regr.gbm: Updated possible 'distribution' settings a bit.
+- oversample, undersample, makeOversampleWrapper, makeUndersampleWrapper, makeOverBaggingWrapper:
+  Added arguments to specifically select the sampled class.
 
 - API changes
 -- listLearners now returns a data frame with properties of the learners if
